# SZo

./: .gitignore  CMakeLists.txt  README.md
include/SZ3/api/impl/: SZAlgoInterp.hpp
include/SZ3/compressor/: SZGenericCompressor.hpp  SZGenericCompressor_Omp.hpp
include/SZ3/decomposition/: InterpolationDecomposition.hpp  InterpolationDecomposition_Omp.hpp  Interpolation_quantizer.inl  Interpolation_quantizer_Omp.inl
include/SZ3/encoder/: HuffmanEncoder.hpp
include/SZ3/utils/: Config.hpp  FileUtil.hpp  Interpolators.hpp  Statistic.hpp
tools/pysz/deprecated/: cpysz.py  test.py
tools/sz3/: CMakeLists.txt  szo.cpp
tools/sz3c/: CMakeLists.txt
tools/sz3c/include/: szo.h
tools/sz3c/src/: szo.cpp
