set(SZOC_TARGET_NAME SZOc)

add_library(${SZOC_TARGET_NAME} src/szo.cpp)

target_link_libraries(${SZOC_TARGET_NAME} PUBLIC SZ3)

target_compile_definitions(${SZOC_TARGET_NAME} PRIVATE SZOC_EXPORTS)

target_include_directories(
        ${SZOC_TARGET_NAME}
        PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include/SZOc>
)

install(TARGETS ${SZOC_TARGET_NAME}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        )
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/SZOc)
